--- a/pages/template.html
+++ b/pages/template.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <button tabindex="0" class="logo"><a href="/"><img src="images/image.png" alt=""></a></button>
+        <button tabindex="0" class="logo"><a href="https://lucasrebl.github.io/inflation-amar/"><img src="images/image.png" alt=""></a></button>
         <button tabindex="0" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/project.html">Projet</a></button>
         <button tabindex="0" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/about.html">A Propos</a></button>
         <button tabindex="0" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">Contact</a></button>
@@ -24,7 +24,7 @@
             src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     </header>
     <header class="mobile">
-        <button tabindex="0" class="logo"><a href="#HOME"><img src="images/image.png" alt=""></a></button>
+        <button tabindex="0" class="logo"><a href="https://lucasrebl.github.io/inflation-amar/"><img src="images/image.png" alt=""></a></button>
         <button tabindex="0" class="burgermenu"><img src="images/burgerbar.png" alt="Menu Burger"></button>
     </header>
     <nav class="headercontent">
