--- a/pages/project.html
+++ b/pages/project.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <button tabindex="1" class="logo"><a href="/"><img src="images/image.png" alt=""></a></button>
+        <button tabindex="1" class="logo"><a href="https://lucasrebl.github.io/inflation-amar/"><img src="images/image.png" alt=""></a></button>
         <button tabindex="2" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/project.html">Projet</a></button>
         <button tabindex="3" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/about.html">A Propos</a></button>
         <button tabindex="4" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">Contact</a></button>
@@ -26,7 +26,7 @@
             src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     </header>
     <header class="mobile">
-        <button tabindex="1" class="logo"><a href="#HOME"><img src="images/image.png" alt=""></a></button>
+        <button tabindex="1" class="logo"><a href="https://lucasrebl.github.io/inflation-amar/"><img src="images/image.png" alt=""></a></button>
         <button tabindex="2" class="burgermenu"><img src="images/burgerbar.png" alt="Menu Burger"></button>
     </header>
     <nav class="headercontent">
