--- a/pages/about.html
+++ b/pages/about.html
@@ -9,15 +9,15 @@
     <meta name="description" content="Découvrez comment AMAR, une association dédiée à la promotion de la mobilité et de 
     l'accessibilité, améliore la qualité de vie des personnes en situation de handicap. Rejoignez-nous dans notre mission et 
     contribuez à rendre le monde plus accessible pour tous.">
-    <link rel="stylesheet" href="styles/about.css">
-    <link rel="stylesheet" href="styles/template.css">
+    <link rel="stylesheet" href="../styles/about.css">
+    <link rel="stylesheet" href="../styles/template.css">
 
     <link href='https://fonts.googleapis.com/css?family=DM Sans' rel='stylesheet'>
 </head>
 
 <body>
     <header>
-        <button tabindex="1" class="logo"><a href="https://lucasrebl.github.io/inflation-amar/"><img src="images/image.png" alt=""></a></button>
+        <button tabindex="1" class="logo"><a href="https://lucasrebl.github.io/inflation-amar/"><img src="../images/image.png" alt=""></a></button>
         <button tabindex="2" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/project.html">Projet</a></button>
         <button tabindex="3" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/about.html">A Propos</a></button>
         <button tabindex="4" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">Contact</a></button>
@@ -31,8 +31,8 @@
             src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     </header>
     <header class="mobile">
-        <button tabindex="1" class="logo"><a href="https://lucasrebl.github.io/inflation-amar/"><img src="images/image.png" alt=""></a></button>
-        <button tabindex="2" class="burgermenu"><img src="images/burgerbar.png" alt="Menu Burger"></button>
+        <button tabindex="1" class="logo"><a href="https://lucasrebl.github.io/inflation-amar/"><img src="../images/image.png" alt=""></a></button>
+        <button tabindex="2" class="burgermenu"><img src="../images/burgerbar.png" alt="Menu Burger"></button>
     </header>
     <nav class="headercontent">
         <button tabindex="1" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/project.html">Projet</a></button>
@@ -55,7 +55,7 @@
                     <h6 tabindex="10">Que Pouvons nous apportez?</h6>
                 </section>
                 <section id="img">
-                    <img src="images/Group_1.png"
+                    <img src="../images/Group_1.png"
                         alt="Deux femmes une avec un T-shirt rouge et l'autre avec un blanc et des lunettes."
                         tabindex="11" />
                 </section>
@@ -79,7 +79,7 @@
                 </p>
             </section>
             <aside>
-                <img src="images/Drug.jpeg" alt="Adrien, le petit garçon assis sur un fauteuil." tabindex="0" />
+                <img src="../images/Drug.jpeg" alt="Adrien, le petit garçon assis sur un fauteuil." tabindex="0" />
                 <p tabindex="17">Adrien</p>
             </aside>
         </section>
@@ -90,40 +90,40 @@
                     préservation de notre environnement en
                     évitant les déchets inutiles. Répondant ainsi à certains des objectifs définis par les Nations Unies
                 </h6>
-                <img src="images/asset 19.jpeg" alt="Objectifs de développement durable" tabindex="20" />
+                <img src="../images/asset 19.jpeg" alt="Objectifs de développement durable" tabindex="20" />
             </section>
             <section class="fourth">
                 <section id="container">
                     <section id="content">
-                        <img src="images/3.jpeg" alt="Bonne santé et bien-être" tabindex="21" />
+                        <img src="../images/3.jpeg" alt="Bonne santé et bien-être" tabindex="21" />
                         <p tabindex="22">Cible 3.8 : réutilisation du matériel médical peut contribuer à améliorer
                             l'accès aux soins de santé de qualité.</p>
                     </section>
                     <section id="content">
-                        <img src="images/9.jpeg" alt="Industrie, Architecture et Infrastructure" tabindex="23" />
+                        <img src="../images/9.jpeg" alt="Industrie, Architecture et Infrastructure" tabindex="23" />
                         <p tabindex="24"> Cible 9.5 : favoriser l'innovation en développant des modèles durables pour les
                             soins de santé.</p>
                     </section>
                     <section id="content">
-                        <img src="images/10.jpeg" alt="Inégalités réduites" tabindex="25" />
+                        <img src="../images/10.jpeg" alt="Inégalités réduites" tabindex="25" />
                         <p tabindex="26">Cible 10.2 : améliorer la qualité des soins dans les régions défavorisées.
                             réduction des inégalités en matière de revenus, de genre, d'âge et d'origine.</p>
                     </section>
                 </section>
                 <aside>
                     <section id="content">
-                        <img src="images/11.jpeg" alt="Villes et communautés durables" tabindex="27" />
+                        <img src="../images/11.jpeg" alt="Villes et communautés durables" tabindex="27" />
                         <p tabindex="28">Cible 11.6 : contribuer à des communautés plus durables en réduisant l'impact
                             environnemental des déchets médicaux.</p>
                     </section>
                     <section id="content">
-                        <img src="images/12.jpeg" alt="Consommation et Production Responsables" tabindex="29" />
+                        <img src="../images/12.jpeg" alt="Consommation et Production Responsables" tabindex="29" />
                         <p tabindex="30">Cible 12.5 : réduire le gaspillage en prolongeant la durée de vie des
                             équipements médicaux et en réduisant la
                             production de déchets médicaux.</p>
                     </section>
                     <section id="content">
-                        <img src="images/17.jpeg" alt="Partenariats pour la réalisation des objectifs" tabindex="31" />
+                        <img src="../images/17.jpeg" alt="Partenariats pour la réalisation des objectifs" tabindex="31" />
                         <p tabindex="32">Cible 17.16 : coopération entre des entités privés et publiques pour développer
                             des initiatives de réutilisation efficaces et
                             durables.</p>
@@ -137,7 +137,7 @@
         <p tabindex="34">Vous voulez faire partie de l'aventure ?</p>
         <button aria-label="Faire un don pour soutenir notre association"  id="donButton"  tabindex="35">Faire un don</button>
         <div class="logo-footer">
-            <img tabindex="36" src="images/image.png" alt="logo amar représentant un coeur">
+            <img tabindex="36" src="../images/image.png" alt="logo amar représentant un coeur">
             <p tabindex="37">Association pour la Mobilité, l'Accessibilité et la Réhabilitation</p>
         </div>
         <p tabindex="38"><a href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">contact@amar-handicap.org</a></p>
@@ -146,7 +146,7 @@
         </p>
     </footer>
 </body>
-<script src="js/index.js"></script>
-<script src="js/translate.js"></script>
+<script src="../js/index.js"></script>
+<script src="../js/translate.js"></script>
 
 </html>
