--- a/pages/accessibility.html
+++ b/pages/accessibility.html
@@ -9,15 +9,15 @@
     <meta name="description" content="Découvrez comment AMAR, une association dédiée à la promotion de la mobilité et de 
     l'accessibilité, améliore la qualité de vie des personnes en situation de handicap. Rejoignez-nous dans notre mission et 
     contribuez à rendre le monde plus accessible pour tous.">
-    <link rel="stylesheet" href="styles/about.css">
-    <link rel="stylesheet" href="styles/template.css">
+    <link rel="stylesheet" href="../styles/about.css">
+    <link rel="stylesheet" href="../styles/template.css">
 
     <link href='https://fonts.googleapis.com/css?family=DM Sans' rel='stylesheet'>
 </head>
 
 <body>
     <header>
-        <button tabindex="1" class="logo"><a href="https://lucasrebl.github.io/inflation-amar/"><img src="images/image.png" alt=""></a></button>
+        <button tabindex="1" class="logo"><a href="https://lucasrebl.github.io/inflation-amar/"><img src="../images/image.png" alt=""></a></button>
         <button tabindex="2" class="header"><a
                 href="https://lucasrebl.github.io/inflation-amar/pages/project.html">Projet</a></button>
         <button tabindex="3" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/about.html">A
@@ -34,8 +34,8 @@
             src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     </header>
     <header class="mobile">
-        <button tabindex="1" class="logo"><a href="https://lucasrebl.github.io/inflation-amar/"><img src="images/image.png" alt=""></a></button>
-        <button tabindex="2" class="burgermenu"><img src="images/burgerbar.png" alt="Menu Burger"></button>
+        <button tabindex="1" class="logo"><a href="https://lucasrebl.github.io/inflation-amar/"><img src="../images/image.png" alt=""></a></button>
+        <button tabindex="2" class="burgermenu"><img src="../images/burgerbar.png" alt="Menu Burger"></button>
     </header>
     <nav class="headercontent">
         <button tabindex="1" class="header"><a
@@ -142,7 +142,7 @@
         <p tabindex="39">Vous voulez faire partie de l'aventure ?</p>
         <button aria-label="Faire un don pour soutenir notre association"  id="donButton"  tabindex="40">Faire un don</button>
         <div class="logo-footer">
-            <img tabindex="41" src="images/image.png" alt="logo amar représentant un coeur">
+            <img tabindex="41" src="../images/image.png" alt="logo amar représentant un coeur">
             <p tabindex="42">Association pour la Mobilité, l'Accessibilité et la Réhabilitation</p>
         </div>
         <p tabindex="43"><a href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">contact@amar-handicap.org</a></p>
@@ -151,7 +151,7 @@
         </p>
     </footer>
 </body>
-<script src="js/index.js"></script>
-<script src="js/translate.js"></script>
+<script src="../js/index.js"></script>
+<script src="../js/translate.js"></script>
 
 </html>
