--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contactez Amar</title>
     <link href='https://fonts.googleapis.com/css?family=DM Sans' rel='stylesheet'>
-    <link href="styles/contact.css" rel="stylesheet" />
-    <link rel="stylesheet" href="styles/template.css">
+    <link href="../styles/contact.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../styles/template.css">
 </head>
 
 <body>
     <header>
-        <button tabindex="1" class="logo"><a href="https://lucasrebl.github.io/inflation-amar/"><img src="images/image.png" alt=""></a></button>
+        <button tabindex="1" class="logo"><a href="https://lucasrebl.github.io/inflation-amar/"><img src="../images/image.png" alt=""></a></button>
         <button tabindex="2" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/project.html">Projet</a></button>
         <button tabindex="3" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/about.html">A Propos</a></button>
         <button tabindex="4" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">Contact</a></button>
@@ -26,8 +26,8 @@
             src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     </header>
     <header class="mobile">
-        <button tabindex="1" class="logo"><a href="https://lucasrebl.github.io/inflation-amar/"><img src="images/image.png" alt=""></a></button>
-        <button tabindex="2" class="burgermenu"><img src="images/burgerbar.png" alt="Menu Burger"></button>
+        <button tabindex="1" class="logo"><a href="https://lucasrebl.github.io/inflation-amar/"><img src="../images/image.png" alt=""></a></button>
+        <button tabindex="2" class="burgermenu"><img src="../images/burgerbar.png" alt="Menu Burger"></button>
     </header>
     <nav class="headercontent">
         <button tabindex="1" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/project.html">Projet</a></button>
@@ -82,9 +82,9 @@
         </p>
     </footer>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script src="js/contact.js"></script>
-    <script src="js/index.js"></script>
-    <script src="js/translate.js"></script>
+    <script src="../js/contact.js"></script>
+    <script src="../js/index.js"></script>
+    <script src="../js/translate.js"></script>
 </body>
 
 </html>
