--- a/pages/project.html
+++ b/pages/project.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/project.css">
+    <link rel="stylesheet" href="../styles/project.css">
     <link href='https://fonts.googleapis.com/css?family=DM Sans' rel='stylesheet'>
-    <link rel="stylesheet" href="styles/template.css">
+    <link rel="stylesheet" href="../styles/template.css">
     <title>Accès à la mobilité pour les enfants au Salvador</title>
 </head>
 
 <body>
     <header>
-        <button tabindex="1" class="logo"><a href="https://lucasrebl.github.io/inflation-amar/"><img src="images/image.png" alt=""></a></button>
+        <button tabindex="1" class="logo"><a href="https://lucasrebl.github.io/inflation-amar/"><img src="../images/image.png" alt=""></a></button>
         <button tabindex="2" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/project.html">Projet</a></button>
         <button tabindex="3" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/about.html">A Propos</a></button>
         <button tabindex="4" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">Contact</a></button>
@@ -26,8 +26,8 @@
             src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     </header>
     <header class="mobile">
-        <button tabindex="1" class="logo"><a href="https://lucasrebl.github.io/inflation-amar/"><img src="images/image.png" alt=""></a></button>
-        <button tabindex="2" class="burgermenu"><img src="images/burgerbar.png" alt="Menu Burger"></button>
+        <button tabindex="1" class="logo"><a href="https://lucasrebl.github.io/inflation-amar/"><img src="../images/image.png" alt=""></a></button>
+        <button tabindex="2" class="burgermenu"><img src="../images/burgerbar.png" alt="Menu Burger"></button>
     </header>
     <nav class="headercontent">
         <button tabindex="1" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/project.html">Projet</a></button>
@@ -49,9 +49,9 @@
             <p tabindex="10">Pour remédier à cette situation, nous allons commencer avec deux structures pour ouvrir la voie, avec
                 l'ambition d'étendre notre initiative à l'échelle nationale.</p>
             <div class="img" >
-                <img src="images/bloomhosp-mv045k301NuMgEP8(1).png" tabindex="11"
+                <img src="../images/bloomhosp-mv045k301NuMgEP8(1).png" tabindex="11"
                     alt="Logo Hospital nacional de ninos BENJAMIN BLOOM">
-                <img src="images/hopac-AQE48Q0EOOcZXlj4.png" tabindex="12" alt="Logo HOPAC">
+                <img src="../images/hopac-AQE48Q0EOOcZXlj4.png" tabindex="12" alt="Logo HOPAC">
             </div>
         </section>
 
@@ -118,7 +118,7 @@
         <p tabindex="32">Vous voulez faire partie de l'aventure ?</p>
         <button aria-label="Faire un don pour soutenir notre association"  id="donButton"  tabindex="33">Faire un don</button>
         <div class="logo-footer">
-            <img tabindex="34" src="images/image.png" alt="logo amar représentant un coeur">
+            <img tabindex="34" src="../images/image.png" alt="logo amar représentant un coeur">
             <p tabindex="35">Association pour la Mobilité, l'Accessibilité et la Réhabilitation</p>
         </div>
         <p tabindex="36"><a href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">contact@amar-handicap.org</a></p>
@@ -127,7 +127,7 @@
         </p>
     </footer>
 </body>
-<script src="js/index.js"></script>
-<script src="js/translate.js"></script>
+<script src="../js/index.js"></script>
+<script src="../js/translate.js"></script>
 
 </html>
